# ncbind

./: .gitignore  CMakeLists.txt  ncbind.cpp  ncbind.hpp  testbind.cpp
.github/workflows/: ci-krkrsdl2.yml
src_list/: sources.txt
